SYNFIG = synfig

EXT = @imageext@


EXTRA_DIST = \
	installer_logo.sif \
	installer_logo_osx.sif \
	splash_screen.sifz \
	splash_screen-0.61.09.sif\
	splash_screen-0.61.08.sif \
	splash_screen-0.61.07.sif \
	about_icon.sif \
	angle_icon.sif \
	bline_icon.sif \
	blinepoint_icon.sif \
	bool_icon.sif \
	canvas_icon.sif \
	canvas_pointer_icon.sif \
	children_icon.sif \
	circle_icon.sif \
	clear_redo_icon.sif \
	clear_undo_icon.sif \
	color_icon.sif \
	curves_icon.sif \
	draw_icon.sif \
	duplicate_icon.sif \
	encapsulate_icon.sif \
	eyedrop_icon.sif \
	fill_icon.sif \
	gradient_icon.sif \
	group_icon.sif \
	info_icon.sif \
	integer_icon.sif \
	keyframe_icon.sif \
	keyframe_lock_icon.sif \
	layer_icon.sif \
	list_icon.sif \
	logo.sif \
	meta_data_icon.sif \
	mirror_icon.sif \
	navigator_icon.sif \
	normal_icon.sif \
	pastecanvas_icon.sif \
	polygon_icon.sif \
	real_icon.sif \
	rectangle_icon.sif \
	rotate_icon.sif \
	saveall_icon.sif \
	scale_icon.sif \
	segment_icon.sif \
	select_all_child_layers_icon.sif \
	sif_icon.sif \
	sketch_icon.sif \
	smooth_move_icon.sif \
	string_icon.sif \
	reset_colors_icon.sif \
	swap_colors_icon.sif \
	synfig_icon.sif \
	synfig_icon.svg \
	time_icon.sif \
	time_track_icon.sif \
	valuenode_icon.sif \
	vector_icon.sif \
	wallpaper.sif \
	width_icon.sif \
	zoom_icon.sif \
	rename_icon.sif \
	plant_icon.sif \
	text_icon.sif \
	polyline_icon.sif \
	star_icon.sif \
	set_fill_color.sif \
	set_outline_color.sif \
	seek_begin.sif \
	seek_end.sif \
	seek_next_frame.sif \
	seek_prev_frame.sif \
	duck_position_icon.sif \
	duck_vertex_icon.sif \
	duck_tangent_icon.sif \
	duck_radius_icon.sif \
	duck_width_icon.sif \
	duck_angle_icon.sif \
	show_grid_icon.sif \
	snap_grid_icon.sif \
	onion_skin_icon.sif \
	incr_resolution_icon.sif \
	decr_resolution_icon.sif \
	render_options_icon.sif \
	preview_options_icon.sif \
	layer_checkerboard_icon.sif \
	layer_duplicate_icon.sif \
	layer_gradient_spiral_icon.sif \
	layer_gradient_radial_icon.sif \
	layer_gradient_noise_icon.sif \
	layer_gradient_curve_icon.sif \
	layer_gradient_conical_icon.sif \
	layer_blur_icon.sif \
	layer_blur_radial_icon.sif \
	layer_blur_motion_icon.sif \
	layer_distortion_curvewarp_icon.sif \
	layer_distortion_insideout_icon.sif \
	layer_distortion_noise_icon.sif \
	layer_distortion_spherize_icon.sif \
	layer_distortion_stretch_icon.sif \
	layer_distortion_twirl_icon.sif \
	layer_distortion_warp_icon.sif \
	layer_filter_clamp_icon.sif \
	layer_filter_colorcorrect_icon.sif \
	layer_filter_halftone2_icon.sif \
	layer_filter_halftone3_icon.sif \
	layer_filter_luma_icon.sif \
	layer_fractal_mandelbrot_icon.sif \
	layer_fractal_julia_icon.sif \
	layer_stylize_bevel_icon.sif \
	layer_stylize_shade_icon.sif \
	layer_example_metaballs_icon.sif \
	layer_other_XOR_icon.sif \
	layer_other_supersample_icon.sif \
	layer_other_timeloop_icon.sif \
	layer_transform_translate_icon.sif \
	action_set_layer_description_icon.sif \
	action_add_to_group_icon.sif \
	action_remove_from_group_icon.sif
	action_export_icon.sif \
	action_unexport_icon.sif

IMAGES = \
	installer_logo.$(EXT) \
	installer_logo_osx.$(EXT) \
	mirror_icon.$(EXT) \
	time_icon.$(EXT) \
	time_track_icon.$(EXT) \
	curves_icon.$(EXT) \
	pastecanvas_icon.$(EXT) \
	group_icon.$(EXT) \
	clear_redo_icon.$(EXT) \
	clear_undo_icon.$(EXT) \
	navigator_icon.$(EXT) \
	info_icon.$(EXT) \
	zoom_icon.$(EXT) \
	meta_data_icon.$(EXT) \
	children_icon.$(EXT) \
	keyframe_icon.$(EXT) \
	reset_colors_icon.$(EXT) \
	swap_colors_icon.$(EXT) \
	rotate_icon.$(EXT) \
	scale_icon.$(EXT) \
	smooth_move_icon.$(EXT) \
	width_icon.$(EXT) \
	rectangle_icon.$(EXT) \
	circle_icon.$(EXT) \
	draw_icon.$(EXT) \
	sketch_icon.$(EXT) \
	fill_icon.$(EXT) \
	normal_icon.$(EXT) \
	select_all_child_layers_icon.$(EXT) \
	sif_icon.$(EXT) \
	synfig_icon.$(EXT) \
	saveall_icon.$(EXT) \
	bool_icon.$(EXT) \
	integer_icon.$(EXT) \
	angle_icon.$(EXT) \
	segment_icon.$(EXT) \
	blinepoint_icon.$(EXT) \
	list_icon.$(EXT) \
	canvas_pointer_icon.$(EXT) \
	string_icon.$(EXT) \
	eyedrop_icon.$(EXT) \
	about_icon.$(EXT) \
	splash_screen.$(EXT) \
	canvas_icon.$(EXT) \
	vector_icon.$(EXT) \
	real_icon.$(EXT) \
	color_icon.$(EXT) \
	valuenode_icon.$(EXT) \
	polygon_icon.$(EXT) \
	bline_icon.$(EXT) \
	layer_icon.$(EXT) \
	duplicate_icon.$(EXT) \
	encapsulate_icon.$(EXT) \
	gradient_icon.$(EXT) \
	keyframe_lock_all.$(EXT) \
	keyframe_lock_past.$(EXT) \
	keyframe_lock_future.$(EXT) \
	keyframe_lock_none.$(EXT) \
	rename_icon.$(EXT) \
	plant_icon.$(EXT) \
	text_icon.$(EXT) \
	polyline_icon.$(EXT) \
	star_icon.$(EXT) \
	set_fill_color.$(EXT) \
	set_outline_color.$(EXT) \
	seek_begin.$(EXT) \
	seek_end.$(EXT) \
	seek_next_frame.$(EXT) \
	seek_prev_frame.$(EXT) \
	duck_position_icon.$(EXT) \
	duck_vertex_icon.$(EXT) \
	duck_tangent_icon.$(EXT) \
	duck_radius_icon.$(EXT) \
	duck_width_icon.$(EXT) \
	duck_angle_icon.$(EXT) \
	show_grid_icon.$(EXT) \
	snap_grid_icon.$(EXT) \
	onion_skin_icon.$(EXT) \
	incr_resolution_icon.$(EXT) \
	decr_resolution_icon.$(EXT) \
	render_options_icon.$(EXT) \
	preview_options_icon.$(EXT) \
	layer_checkerboard_icon.$(EXT) \
	layer_duplicate_icon.$(EXT) \
	layer_gradient_spiral_icon.$(EXT) \
	layer_gradient_radial_icon.$(EXT) \
	layer_gradient_noise_icon.$(EXT) \
	layer_gradient_curve_icon.$(EXT) \
	layer_gradient_conical_icon.$(EXT) \
	layer_blur_icon.$(EXT) \
	layer_blur_radial_icon.$(EXT) \
	layer_blur_motion_icon.$(EXT) \
	layer_distortion_curvewarp_icon.$(EXT) \
	layer_distortion_insideout_icon.$(EXT) \
	layer_distortion_noise_icon.$(EXT) \
	layer_distortion_spherize_icon.$(EXT) \
	layer_distortion_stretch_icon.$(EXT) \
	layer_distortion_twirl_icon.$(EXT) \
	layer_distortion_warp_icon.$(EXT) \
	layer_filter_clamp_icon.$(EXT) \
	layer_filter_colorcorrect_icon.$(EXT) \
	layer_filter_halftone2_icon.$(EXT) \
	layer_filter_halftone3_icon.$(EXT) \
	layer_filter_luma_icon.$(EXT) \
	layer_fractal_mandelbrot_icon.$(EXT) \
	layer_fractal_julia_icon.$(EXT) \
	layer_stylize_bevel_icon.$(EXT) \
	layer_stylize_shade_icon.$(EXT) \
	layer_example_metaballs_icon.$(EXT) \
	layer_other_XOR_icon.$(EXT) \
	layer_other_supersample_icon.$(EXT) \
	layer_other_timeloop_icon.$(EXT) \
	layer_transform_translate_icon.$(EXT) \
	action_set_layer_description_icon.$(EXT) \
	action_add_to_group_icon.$(EXT) \
	action_remove_from_group_icon.$(EXT) \
	action_export_icon.$(EXT) \
	action_unexport_icon.$(EXT)


MAINTAINERCLEANFILES = \
	Makefile.in


CLEANFILES = \
	$(IMAGES) \
	images.nsh \
	unimages.nsh \
	installer_logo.bmp \
	sif_icon.ico \
	synfig_icon.ico \
	icons.nsh \
	unicons.nsh

CLEANDIRS = \
	16x16 \
	22x22 \
	24x24 \
	32x32 \
	48x48 \
	64x64 \
	128x128

image_DATA = $(IMAGES)


all: $(IMAGES)

SUFFIXES = .sif .tif .png

#.SUFFIXES: $(SUFFIXES)

PNGTOICO = png2ico

.sif.ico:
	$(SYNFIG) $< -w 16 -h 16 -o $*-16x16.png $< -w 32 -h 32 -o $*-32x32.png $< -w 48 -h 48 -o $*-48x48.png $< -w 64 -h 64 -o $*-64x64.png
	cp -f `which $(PNGTOICO)`.* ./
	$(PNGTOICO) $@ $*-16x16.png $*-32x32.png $*-48x48.png $*-64x64.png
	rm -f ./$(PNGTOICO).* $*-16x16.png $*-32x32.png $*-48x48.png $*-64x64.png
	echo "  File \"images\\$@\"" >>./icons.nsh
	echo "  Delete \"\$$INSTDIR\\share\\pixmaps\\$@\"" >>./unicons.nsh

clean-local:
	$(RM) -r $(CLEANDIRS)

.sif.bmp:
	$(SYNFIG) -q $< -o $@ --time 0

.sif.$(EXT):
	$(SYNFIG) -q $< -o $@ --time 0
	echo "  File \"images\\$@\"" >>./images.nsh
	echo "  Delete \"\$$INSTDIR\\share\\pixmaps\\$@\"" >>./unimages.nsh

.sifz.$(EXT):
	$(SYNFIG) -q $< -o $@ --time 0
	echo "  File \"images\\$@\"" >>./images.nsh
	echo "  Delete \"\$$INSTDIR\\share\\pixmaps\\$@\"" >>./unimages.nsh

keyframe_lock_all.$(EXT): $(srcdir)/keyframe_lock_icon.sif
	$(SYNFIG) -q $< -o $@ --time 0
	echo "  File \"images\\$@\"" >>./images.nsh
	echo "  Delete \"\$$INSTDIR\\share\\pixmaps\\$@\"" >>./unimages.nsh

keyframe_lock_past.$(EXT): $(srcdir)/keyframe_lock_icon.sif
	$(SYNFIG) -q $< -o $@ --time 0 -c PastOnly
	echo "  File \"images\\$@\"" >>./images.nsh
	echo "  Delete \"\$$INSTDIR\\share\\pixmaps\\$@\"" >>./unimages.nsh

keyframe_lock_future.$(EXT): $(srcdir)/keyframe_lock_icon.sif
	$(SYNFIG) -q $< -o $@ --time 0 -c FutureOnly
	echo "  File \"images\\$@\"" >>./images.nsh
	echo "  Delete \"\$$INSTDIR\\share\\pixmaps\\$@\"" >>./unimages.nsh

keyframe_lock_none.$(EXT): $(srcdir)/keyframe_lock_icon.sif
	$(SYNFIG) -q $< -o $@ --time 0 -c Disabled
	echo "  File \"images\\$@\"" >>./images.nsh
	echo "  Delete \"\$$INSTDIR\\share\\pixmaps\\$@\"" >>./unimages.nsh


if !WIN32_PKG
if !MACOSX_PKG

16x16/synfig_icon.$(EXT): synfig_icon.sif
	-mkdir 16x16
	$(SYNFIG) -q $< -o $@ --time 0 -w 16 -h 16

icons16dir = $(datadir)/icons/hicolor/16x16/apps
icons16_DATA = 16x16/synfig_icon.$(EXT)

22x22/synfig_icon.$(EXT): synfig_icon.sif
	-mkdir 22x22
	$(SYNFIG) -q $< -o $@ --time 0 -w 22 -h 22

icons22dir = $(datadir)/icons/hicolor/22x22/apps
icons22_DATA = 22x22/synfig_icon.$(EXT)

24x24/synfig_icon.$(EXT): synfig_icon.sif
	-mkdir 24x24
	$(SYNFIG) -q $< -o $@ --time 0 -w 24 -h 24

icons24dir = $(datadir)/icons/hicolor/24x24/apps
icons24_DATA = 24x24/synfig_icon.$(EXT)

32x32/synfig_icon.$(EXT): synfig_icon.sif
	-mkdir 32x32
	$(SYNFIG) -q $< -o $@ --time 0 -w 32 -h 32

icons32dir = $(datadir)/icons/hicolor/32x32/apps
icons32_DATA = 32x32/synfig_icon.$(EXT)

48x48/synfig_icon.$(EXT): synfig_icon.sif
	-mkdir 48x48
	$(SYNFIG) -q $< -o $@ --time 0 -w 48 -h 48

icons48dir = $(datadir)/icons/hicolor/48x48/apps
icons48_DATA = 48x48/synfig_icon.$(EXT)

64x64/synfig_icon.$(EXT): synfig_icon.sif
	-mkdir 64x64
	$(SYNFIG) -q $< -o $@ --time 0 -w 64 -h 64

icons64dir = $(datadir)/icons/hicolor/64x64/apps
icons64_DATA = 64x64/synfig_icon.$(EXT)

128x128/synfig_icon.$(EXT): synfig_icon.sif
	-mkdir 128x128
	$(SYNFIG) -q $< -o $@ --time 0 -w 128 -h 128

icons128dir = $(datadir)/icons/hicolor/128x128/apps
icons128_DATA = 128x128/synfig_icon.$(EXT)

iconsscalabledir = $(datadir)/icons/hicolor/scalable/apps
iconsscalable_DATA = synfig_icon.svg

endif
endif
